--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,7 +4,8 @@ on:
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
-
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
