--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,4 +18,4 @@ jobs:
         id: snake-gif
         with:
           github_user_name: 'umran666'
-          outputs_path: 'output/github-contribution-grid-snake.svg'
+          outputs: 'dist/github-contribution-grid-snake.svg'
